# Codex-Hackathon-Tamalife

./: .env.example  .gitignore  README.md  app.json  docker-compose.yml  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6a4d7e9b2c10_add_idempotency_and_webhook_events.py  a2d6c4e8f105_add_receipt_failure_and_documents.py  a7c5e1d9f402_add_source_fetch_extracted_data.py  b4f6c8d0e213_add_widget_token_scope.py  b8e6d0f2a713_merge_scraper_and_push_heads.py  c4f7a2e91b30_notification_categories.py  c7d9e2a4b601_add_clerk_user_lifecycle.py  c9d7e3f5a604_add_catalog_publication_state.py  d1e5f7a9c304_harden_rls_and_sqlite_receipt_type.py  dabf48a0052a_initial_schema.py  e8b3f1a7c902_add_reminder_deliveries.py  ece2779ead19_add_price_intelligence_catalog.py  f1a4c9d6b820_add_device_push_tokens.py  f4c2a1d8e703_add_clerk_user_identity.py
backend/app/: config.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: errors.py  logging.py  security.py
backend/app/schemas/: auth.py
backend/app/services/: users.py
backend/docs/: PRICE_INTELLIGENCE.md
backend/src/tamalife_backend/: __init__.py  admin_schemas.py  cli.py  config.py  errors.py  logging.py  main.py  price_intelligence_schemas.py  schemas.py  security.py
backend/src/tamalife_backend/api/: admin_scraper.py  clerk_webhooks.py  dashboard.py  dependencies.py  me.py  notifications.py  operations.py  parsing.py  preferences.py  (+4 more)
backend/supabase/: 001_storage.sql  README.md
backend/tests/: conftest.py  test_auth.py  test_health.py
backend/tests/contract/: test_extraction_schema.py
backend/tests/integration/: test_api.py  test_auth.py  test_clerk_webhooks.py  test_parsing_pipeline.py  test_price_intelligence_api.py  test_push_tokens.py  test_widget_lifecycle.py
backend/tests/unit/: test_admin_scraper.py  test_cleanup.py  test_config.py  test_database_session.py  test_demo_intelligence.py  test_discovery_config.py  test_discovery_tasks.py  test_fcm_sender.py  test_health.py  test_manual_scrape.py  test_plan_diff.py  test_price_intelligence_domain.py  test_price_intelligence_schema.py  test_pricing_extraction.py  test_recommendation_refresh_tasks.py  test_recommendations.py  test_reminder_jobs.py  test_safe_fetch.py  test_schema.py  test_scraper_discovery.py  test_security.py  test_source_monitoring.py  test_source_monitoring_tasks.py  test_storage.py  test_url_safety.py  test_widget_cache.py
(+205 files in other folders)
